Finish recording instead of activating when activated from shortcut while recording

Someday we should find a way to support screenshot shortcuts while recording in some way. For now we have behavior that is safe, if not always expected.

BUG: 481471
(cherry picked from commit 0c491bb984825cac4366dc181c0ea04e18714934)